@@ -18,6 +18,7 @@
   * Added updateListItemView to M.ListView.
   * Minor performance improvement for M.LoaderView (cached selector).
   * Fixed inconsistency bug with selection list in single_selection_dialog mode.
+  * Added iconSize property to M.MapMarkerView.
 
 ** Version 1.2 - Date 02.07.2012 **
 
